# dev-container-template

./: .gitignore  CLAUDE.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
tests/: test_main.py
